# Dynamic-Load-Balancer-for-Multi-Core-Systems

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: cpu_balancer.conf
include/: config.h  core.h  cpu_stats.h  load_balancer.h  logger.h  task.h  task_queue.h
src/: config.c  core.c  cpu_stats.c  load_balancer.c  logger.c  main.c  task.c  task_queue.c
